<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Play Again"
        android:onClick="playAgain"
        android:layout_marginStart="32dp"
        android:layout_marginTop="650dp"
        android:visibility="invisible"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="@id/board"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        android:layout_marginLeft="25dp" />

    <ImageView
        android:id="@+id/board"
        android:layout_width="407dp"
        android:layout_height="799dp"
        android:contentDescription="@string/tic_tac_toe_board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/board" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="128dp"
        android:layout_height="129dp"
        android:layout_marginTop="210dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:onClick="play"
        android:tag="0"
        android:contentDescription="@string/zero_1"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        tools:layout_editor_absoluteY="211dp"
         />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="129dp"
        android:layout_marginTop="210dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:onClick="play"
        android:tag="1"
        android:contentDescription="@string/zero_2"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        tools:layout_editor_absoluteY="211dp"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="129dp"
        android:layout_marginTop="210dp"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="260dp"
        android:onClick="play"
        android:tag="2"
        android:contentDescription="@string/zero_3"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        tools:layout_editor_absoluteY="211dp"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="128dp"
        android:layout_height="129dp"
        android:layout_marginTop="339dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:onClick="play"
        android:tag="3"
        android:contentDescription="@string/zero_4"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        tools:layout_editor_absoluteY="211dp"
        />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="128dp"
        android:layout_height="129dp"
        android:layout_marginTop="339dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:onClick="play"
        android:tag="4"
        android:contentDescription="@string/zero_5"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        tools:layout_editor_absoluteY="211dp"
        />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="128dp"
        android:layout_height="129dp"
        android:layout_marginTop="339dp"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="260dp"
        android:onClick="play"
        android:tag="5"
        android:contentDescription="@string/zero_6"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        tools:layout_editor_absoluteY="211dp"
        />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="128dp"
        android:layout_height="129dp"
        android:layout_marginTop="466dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:onClick="play"
        android:tag="6"
        android:contentDescription="@string/zero_7"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        tools:layout_editor_absoluteY="211dp"
        />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="128dp"
        android:layout_height="129dp"
        android:layout_marginTop="466dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:onClick="play"
        android:tag="7"
        android:contentDescription="@string/zero_8"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        tools:layout_editor_absoluteY="211dp"
        />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="128dp"
        android:layout_height="129dp"
        android:layout_marginTop="467dp"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="260dp"
        android:onClick="play"
        android:tag="8"
        android:contentDescription="@string/zero_9"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        tools:layout_editor_absoluteY="211dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>